
이전 릴리즈에서는 Cloud Backup이 Google Cloud Storage 버킷에 액세스할 수 있도록 서비스 계정에 "Storage Admin" 역할이 필요했습니다. 이제 서비스 계정에 할당할 수 있는 권한이 축소된 사용자 지정 역할을 만들 수 있습니다. https://docs.netapp.com/us-en/cloud-manager-backup-restore/task-backup-onprem-to-gcp.html#preparing-google-cloud-storage-for-backups["백업을 위해 Google Cloud Storage를 준비하는 방법을 알아보십시오"].



=== 작업 모니터링 결과 페이지를 .csv 보고서로 다운로드할 수 있습니다

작업 모니터링 페이지를 필터링하여 관심 있는 작업 및 작업을 표시한 후에는 해당 데이터의 .csv 파일을 생성하고 다운로드할 수 있습니다. 그런 다음 정보를 분석하거나 조직의 다른 사용자에게 보고서를 보낼 수 있습니다. https://docs.netapp.com/us-en/cloud-manager-backup-restore/task-monitor-backup-jobs.html#download-job-monitoring-results-as-a-report["작업 모니터링 보고서를 생성하는 방법을 참조하십시오"].



== 2022년 12월 19일



=== 애플리케이션의 클라우드 백업 개선

* SAP HANA 데이터베이스
+
** Azure NetApp Files(ANF)에 상주하는 SAP HANA 데이터베이스의 정책 기반 백업 및 복원 지원
** 사용자 지정 정책을 지원합니다


* Oracle 데이터베이스
+
** 호스트를 추가하고 플러그인을 자동으로 구축합니다
** 사용자 지정 정책을 지원합니다
** Cloud Volumes ONTAP에 상주하는 Oracle 데이터베이스의 정책 기반 백업, 복원 및 복제를 지원합니다
** NetApp ONTAP용 Amazon FSx에 상주하는 Oracle 데이터베이스의 정책 기반 백업 및 복원을 지원합니다
** 연결 및 복사 방법을 사용하여 Oracle 데이터베이스 복원을 지원합니다
** Oracle 21c를 지원합니다
** 클라우드 네이티브 Oracle 데이터베이스의 클론 복제 지원






=== 가상 머신용 Cloud Backup의 향상된 기능

* 가상 머신
+
** 사내 보조 스토리지에서 가상 머신 백업
** 사용자 지정 정책을 지원합니다
** 하나 이상의 데이터 저장소를 백업하기 위해 Google Cloud Platform(GCP) 지원
** Glacier, Deep Glacier 및 Azure Archive와 같은 저비용 클라우드 스토리지를 지원합니다






== 2022년 12월 6일



=== 필요한 커넥터 아웃바운드 인터넷 액세스 엔드포인트 변경

Cloud Backup의 변경으로 인해 Cloud Backup 작업을 성공적으로 수행하려면 다음 Connector 엔드포인트를 변경해야 합니다.

[cols="50,50"]
|===
| 이전 끝점 | 새 끝점 


| https://cloudmanager.cloud.netapp.com 으로 문의하십시오 | https://api.bluexp.netapp.com 으로 문의하십시오 


| https://*.cloudmanager.cloud.netapp.com 으로 문의하십시오 | https://*.api.bluexp.netapp.com 으로 문의하십시오 
|===