@@ -1424,8 +1424,6 @@
   <block id="1ad501aca706aedda73a497f3e05cad4" category="list-text">포트 443을 통해 클라우드 백업으로 아웃바운드 인터넷 연결(커넥터가 "어두운" 사이트에 설치된 경우 필요하지 않음)</block>
   <block id="7213734d8950b4641631fa35737ef55d" category="list-text">백업할 볼륨이 상주하는 ONTAP 클러스터의 IPspace 이 IPspace용 인터클러스터 LIF는 아웃바운드 인터넷 액세스를 가져야 합니다( 커넥터가 "어두운" 사이트에 설치된 경우 필요하지 않음).</block>
   <block id="9fe942ae01924dd657ce7f1996246cc6" category="section-title">인터넷 연결이 없는 사이트에 대한 지원</block>
-  <block id="012009e84c36a8660d26e3a3201d2fe9" category="list-text">인터넷 액세스(다크 사이트)가 없는 사이트에 Connector가 설치된 경우 검색 및 복원을 사용하여 파일 수준 복원이 지원되지 않습니다.</block>
-  <block id="2deb7493de6dd6e8fd3126d72d730f68" category="cell">어두운 사이트에서는 지원되지 않습니다</block>
   <block id="664bf8c6e31ba8a710f5213d1874cd18" category="list-text">백업 라이센스 파일이 있는 경우(어두운 사이트에 설치할 때 필요) * 라이센스 파일 업로드 * 옵션을 선택하고 메시지에 따라 파일을 첨부합니다.</block>
   <block id="d4e2be367ddcfb2b47d5711136446363" category="section-title">2022년 6월 14일</block>
   <block id="dd16b8804cbc8afa6e2f6deb9acf5bcf" category="section-title">인터넷에 연결되지 않은 사이트에서 사내 ONTAP 클러스터 데이터를 백업하는 데 지원이 추가되었습니다</block>
@@ -2555,11 +2553,9 @@
   <block id="e191225ef89ae4b4097edff77c5ad2a5" category="list-text">Amazon S3의 경우 Connector를 AWS 또는 사내에 구현할 수 있습니다</block>
   <block id="2bdfeeb4dec8a7b723d287568533182e" category="list-text">Azure Blob의 경우 Connector를 Azure 또는 사내에 배포할 수 있습니다</block>
   <block id="477b6dc7ebfe6a69105359bdce55f421" category="list-text">Google 클라우드 스토리지의 경우 Connector를 Google Cloud Platform VPC에 구축해야 합니다</block>
-  <block id="e379a23dde4555ac0507594521c2f485" category="list-text">StorageGRID의 경우 커넥터를 사내에 구축해야 합니다</block>
   <block id="c49f59ffa802db74f79cfe31499cbec3" category="section-title">폴더 및 파일 복원 중</block>
   <block id="a6d15ed479d88aab273727debe09b199" category="paragraph">ONTAP 볼륨 백업에서 폴더 또는 파일을 볼륨으로 복원하려면 다음 단계를 수행하십시오. 폴더 또는 파일을 복원하는 데 사용할 볼륨 이름과 백업 파일 날짜를 알아야 합니다. 이 기능은 Live Browsing을 사용하여 각 백업 파일 내의 디렉터리 및 파일 목록을 볼 수 있습니다.</block>
   <block id="1c01241cf7c3489f40f6f12fb4239c09" category="paragraph">검색 및 복원의 경우 커넥터를 다음 위치에 설치할 수 있습니다.</block>
-  <block id="b3099050d137cae2d6b32ee13fa2a9a2" category="list-text">StorageGRID의 경우 인터넷 연결을 사용하여 커넥터를 사내에 구축해야 합니다</block>
   <block id="50dbd12360a1c9bec9e23472af649ee9" category="list-text">StorageGRID 요구 사항:</block>
   <block id="2372538267040a6e644c149e870e7242" category="paragraph">구성에 따라 검색 및 복원을 구현하는 방법에는 두 가지가 있습니다.</block>
   <block id="d1bf7f840fa5b89e3ec98ec94dcf9f3c" category="list-text">계정에 클라우드 공급자 자격 증명이 없으면 인덱싱된 카탈로그 정보가 Connector에 저장됩니다.</block>
@@ -2756,7 +2752,6 @@
   <block id="373e31603b5a78ab3bc84cbe57c892b5" category="paragraph">각 백업 정책은 백업 파일에 적용할 수 있는 _Archival Policy_에 대한 섹션을 제공합니다.</block>
   <block id="0776412162b9ad0d387bbf818146d659" category="sidebar">지원되는 Google 아카이브 스토리지 계층</block>
   <block id="91770f038cd944a1d3b9b347edeb2b10" category="sidebar">새로운 기능</block>
-  <block id="442630401ddd0f14988d739183c35505" category="list-text">오브젝트 저장소의 WORM/규정 준수 모드는 현재 Amazon S3 및 StorageGRID에서만 지원됩니다. 이를 DataLock 기능이라고 하며 Cloud Backup 설정을 사용하여 관리해야 합니다.</block>
   <block id="b2ff0fb046b03e40e599f1561ed5ebd3" category="list-text">FlexGroup 볼륨에서 FlexVol 볼륨으로 또는 FlexVol 볼륨을 FlexGroup 볼륨으로 복원하는 것은 지원되지 않습니다.</block>
   <block id="c911798e68210cf43e7a5a85f31ebebe" category="paragraph">클라우드 백업 API를 시작하려면 사용자 토큰, BlueXP 계정 ID 및 BlueXP 커넥터 ID를 얻어야 합니다.</block>
   <block id="30bc6b6cbbb254a1299f2544d8a09731" category="paragraph">API 호출을 할 때 인증 헤더에 사용자 토큰을 추가하고 X-agent-id 헤더에 BlueXP 커넥터 ID를 추가합니다. API에서 BlueXP 계정 ID를 사용해야 합니다.</block>
@@ -2778,7 +2773,6 @@
   <block id="ad28f8f849480a4631fcbda2422f9afa" category="paragraph">Cloud Backup은 용량제 모델로 소비 기반 라이센스를 제공합니다. 클라우드 공급자의 마켓플레이스를 통해 구독한 후에는 백업된 데이터의 경우 GiB당 요금을 지불하면 됩니다. 이 경우 즉시 지불이 이루어집니다. 클라우드 공급자가 월별 요금을 청구합니다.</block>
   <block id="2802742de18e4e6fd33742e9f320577d" category="paragraph">백업 복사본은 BlueXP가 클라우드 계정에 생성하는 객체 저장소에 저장됩니다. 클러스터/작업 환경당 오브젝트 저장소가 하나씩 있으며 BlueXP에서는 오브젝트 저장소의 이름을 "NetApp-backup-clusteruuid"로 지정합니다. 이 오브젝트 저장소를 삭제하지 마십시오.</block>
   <block id="bea14d044add005ebbc3ac7671a9bac7" category="list-text">사용된 SnapMirror 레이블과 관계없이 SnapMirror 대상 볼륨에 스냅샷의 로컬 복사본을 생성하는 경우 이러한 스냅샷은 백업으로 클라우드로 이동하지 않습니다. 이때 Cloud Backup을 백업하기 위해 소스 DP 볼륨에 원하는 레이블이 있는 스냅샷 정책을 생성해야 합니다.</block>
-  <block id="a5de9c26eaee9b57d8bcd1ff4d49f888" category="list-text">FlexGroup 볼륨 백업은 아카이브 스토리지로 이동하거나 DataLock 및 랜섬웨어 보호를 사용할 수 없습니다.</block>
   <block id="9defdde711056fe7bbfd4e7bfc21de90" category="inline-link">게이트웨이 엔드포인트에 대해 자세히 알아보십시오</block>
   <block id="5395d21beaf13b09f8644c9586a34bbb" category="paragraph">VPC 게이트웨이 엔드포인트는 이미 VPC에 있어야 합니다.<block ref="efccbdf33ae534e50311d23fe5ad227e" category="inline-link-rx"></block>.</block>
   <block id="172483accc796d1a4b4deb4fe01ad8d4" category="list-text">"S3:PutBucketPolicy" 및 "S3:PutBucketOwnershipControls" 권한이 BlueXP Connector에 권한을 제공하는 IAM 역할의 일부인지 확인합니다.</block>
@@ -3427,7 +3421,6 @@
   <block id="98c4206e171ce9b62f1dadef4f4da528" category="list-text">StorageGRID는 이어야 합니다<block ref="a62572fc02ca2a884f6a1e42d38d1d55" category="inline-link-rx"></block></block>
   <block id="68aa7e5e44b2aff449b0543b49e563bd" category="inline-link-macro">AWS 아카이브 계층에 대해 자세히 알아보십시오</block>
   <block id="9ac50560d5fb673e5d33906e46dd98c6" category="list-text">현재 아카이브 스토리지는 AWS S3 스토리지 클래스에서만 지원됩니다. AWS S3 Glacier 또는 S3 Glacier Deep Archive 스토리지에 백업을 계층화하도록 선택할 수 있습니다. <block ref="99a80ab47f2b3c111e86aba05224c42e" category="inline-link-macro-rx"></block>.</block>
-  <block id="ec1bc3c970d4b572c193f7ae566018d4" category="list-text">백업이 위치할 스토리지 공간에 대한 AWS S3 구독을 신청해야 합니다.</block>
   <block id="832d0ea7eab67f52faa651ad1475e14a" category="paragraph">클러스터의 백업 정책에 대한 아카이브 설정을 정의할 때 클라우드 공급자 자격 증명을 입력하고 사용할 스토리지 클래스를 선택합니다. 클러스터에 대한 백업을 활성화하면 Cloud Backup 이 클라우드 버킷을 생성합니다. AWS 아카이브 스토리지에 필요한 정보는 다음과 같습니다.</block>
   <block id="1561c5b8437cf775ebce2ca08e284b68" category="inline-image-macro">StorageGRID에서 AWS S3로 백업 파일을 아카이빙하는 데 필요한 정보의 스크린샷</block>
   <block id="4e82138d6097530281cd6cb668514613" category="paragraph"><block ref="4e82138d6097530281cd6cb668514613" category="inline-image-macro-rx" type="image"></block></block>
@@ -3440,4 +3433,13 @@
   <block id="fe3f1bd257c4451d8f8bcbf9a1a58d34" category="paragraph"><block ref="1247b899b5e6800d8fd9e850903ad55a" category="inline-link-rx"></block>.</block>
   <block id="275b9b785d71f45bb8f134005ece056a" category="paragraph">* 참고: * 볼륨이 백업되지 않도록 하는 경우 클라우드 공급자가 백업이 사용하는 용량에 대한 객체 스토리지 비용에 대해 계속해서 비용을 부과합니다 <block ref="e2e48247dd6dcee2daca407937463dc9" category="inline-xref-macro-rx"></block>.</block>
   <block id="46fb0ddeabbcb2b9784add28928cfe7a" category="paragraph">볼륨에 적용할 정책이 이미 있어야 합니다.</block>
+  <block id="da241970bf8ab518d4b9fd4ec20e3a48" category="list-text">백업이 위치할 스토리지 공간을 위해 Amazon S3 계정을 등록해야 합니다.</block>
+  <block id="3c6238f54517e5cf7923ae4c33a5eff9" category="list-text">StorageGRID의 경우 인터넷 액세스 유무에 관계없이 커넥터를 사내에 구축해야 합니다</block>
+  <block id="cd1cceb157b5982d899b66d18217af64" category="list-text">어두운 사이트에서 Connector를 사용하는 경우 인덱싱된 카탈로그 정보는 Connector에 저장됩니다(Connector 버전 3.9.25 이상 필요).</block>
+  <block id="e083799711dc9b588bbb440525564506" category="section-title">인터넷 액세스 없이 사이트에서 검색 및 복원을 사용하여 데이터를 복원할 수 있도록 지원이 추가되었습니다</block>
+  <block id="7582bcce7533bd53ab590d04904ea75b" category="paragraph">인터넷에 액세스할 수 없는 사이트의 ONTAP 클러스터 데이터를 StorageGRID으로 백업하는 경우(다크 사이트 또는 오프라인 사이트라고도 함), 이제 검색 및 복원 옵션을 사용하여 필요한 경우 데이터를 복원할 수 있습니다. 이 기능을 사용하려면 BlueXP 커넥터(버전 3.9.25 이상)가 오프라인 사이트에 배포되어야 합니다.</block>
+  <block id="c9ec78264dce9938676b736265201e28" category="inline-link">검색 및 amp; 복원을 사용하여 ONTAP 데이터를 복원하는 방법을 확인하십시오</block>
+  <block id="74aacc002c6d6d85e9786012bf71af08" category="paragraph"><block ref="fbe0ce057e5d8013a227c4cb944242a5" category="inline-link-rx"></block>.<block ref="eb618b89294e80d594faecbc4641afee" category="inline-link-rx"></block>.</block>
+  <block id="4f60787e5fe87ac0aa425be67237edec" category="list-text">FlexGroup 볼륨 백업은 아카이브 스토리지로 이동하거나 DataLock 및 랜섬웨어 보호를 사용할 수 없습니다.</block>
+  <block id="1f973e0276bdcc7629141de9466f59f2" category="list-text">오브젝트 저장소의 WORM/규정 준수 모드는 현재 Amazon S3 및 StorageGRID에서만 지원됩니다. 이를 DataLock 기능이라고 하며 클라우드 공급자 인터페이스를 사용하지 않고 Cloud Backup 설정을 사용하여 관리해야 합니다.</block>
 </blocks>
