@@ -406,6 +406,10 @@ endif::gcp[]
 
 
 
+== 제한 사항
+
+
+
 === 백업 제한 사항
 
 * 이전 백업 파일을 아카이브 스토리지에 계층화하려면 클러스터에서 ONTAP 9.10.1 이상이 실행되고 있어야 합니다. 아카이브 스토리지에 있는 백업 파일에서 볼륨을 복원하려면 대상 클러스터에서 ONTAP 9.10.1 이상이 실행되고 있어야 합니다.
@@ -427,7 +431,7 @@ endif::gcp[]
 * 데이터 보호 볼륨에서 * 지금 백업 * 버튼을 사용한 임시 볼륨 백업이 지원되지 않습니다.
 * SM-BC 구성은 지원되지 않습니다.
 * ONTAP는 단일 볼륨에서 여러 오브젝트 저장소로 이루어진 SnapMirror 관계를 지원하지 않습니다. 따라서 Cloud Backup에서는 이 구성을 지원하지 않습니다.
-* 오브젝트 저장소의 WORM/규정 준수 모드는 현재 Amazon S3 및 StorageGRID에서만 지원됩니다. 이를 DataLock 기능이라고 하며 Cloud Backup 설정을 사용하여 관리해야 합니다.
+* 오브젝트 저장소의 WORM/규정 준수 모드는 현재 Amazon S3 및 StorageGRID에서만 지원됩니다. 이를 DataLock 기능이라고 하며 클라우드 공급자 인터페이스를 사용하지 않고 Cloud Backup 설정을 사용하여 관리해야 합니다.
 
 
 
@@ -440,7 +444,8 @@ endif::gcp[]
 * Search & Restore는 한 번에 하나의 파일을 복원할 수 있습니다.
 * 찾아보기 및 복원, 검색 및 복원은 한 번에 하나의 폴더를 복원할 수 있습니다.
 * FlexGroup 볼륨에서 FlexVol 볼륨으로 또는 FlexVol 볼륨을 FlexGroup 볼륨으로 복원하는 것은 지원되지 않습니다.
-* 인터넷 액세스(다크 사이트)가 없는 사이트에 Connector가 설치된 경우 검색 및 복원을 사용하여 파일 수준 복원이 지원되지 않습니다.
+
+
 * 백업 파일이 아카이브 스토리지에 있는 경우 개별 폴더를 복원할 수 없습니다.
 * 복원 중인 파일은 대상 볼륨의 언어와 동일한 언어를 사용해야 합니다. 언어가 동일하지 않으면 오류 메시지가 나타납니다.
 
